@@ -11191,6 +11191,13 @@
             ]
           },
           {
+            "code": 355,
+            "indent": 0,
+            "parameters": [
+              "$gameTroop._enemies[0]._spriteCanMove = true;"
+            ]
+          },
+          {
             "code": 333,
             "indent": 0,
             "parameters": [
