@@ -10,6 +10,7 @@ Changes:
  - Fire takes 25% damage from Ice instead of 0%.
  - Ethereal Bat Wing can drop more than once.
  - Reduced bits/EXP variation from 5% to 3%.
+ - Apocalypse uses idle motion in place of dying/dead motions.
 
 Bug Fixes:
  - Fixed statues giving an element rate decrease not working as intended.
